# Trabalho-Edibh

./: .env.example  .gitignore  AUDIT_REPORT_PHASE1.txt  CRITICAL_WARNINGS.txt  DEPLOYMENT_GUIDE.md  DETAILED_FIX_GUIDE.txt  GUIA_ATIVAR_PROJETO_LOCAL.txt  GUIA_DEPLOY_PRODUCAO.txt  PROJECT_DOCUMENTATION.txt  RAILWAY_QUICK_START.md  README.md  START_LOCAL.bat  START_LOCAL.sh  WEB_DEPLOYMENT_SUMMARY.txt  docker-compose.yml  export_20260626_082223.json  export_20260626_082337.json  package-lock.json  package.json  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  middlewares.py  schemas.py  supabase_client.py
backend/app/auth/: dependencies.py  microsoft.py  token.py
backend/app/data/: form_fields.json  local_storage.py  sharepoint_config.json  storage.py  users.json
backend/app/routes/: __init__.py  audit.py  auth.py  dashboard.py  exports.py  form_manager.py  history.py  reports.py  sharepoint_config.py
backend/app/services/: audit_service.py  email_service.py  export_service.py  file_storage_service.py  pdf_service.py  report_service.py  sharepoint_config_service.py  sharepoint_service.py  user_service.py
backend/exports/: all_data_20260626_082306.json  all_data_20260626_084243.json  all_data_20260626_084247.json  all_data_20260626_084339.json  all_data_20260626_084404.json
exports/: README.md
frontend/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/public/: index.html
frontend/src/: App.tsx  alerts.ts  api.ts  index.tsx  (+2 more)
(+21 files in other folders)
